--- a/framework/config.json
+++ b/framework/config.json
@@ -10,6 +10,7 @@
             "pm.vbat",
             "stabilizer.roll"
         ],
+        "frequency": 100,
         "name": "LoggingConfig",
         "zmq": {
             "port": 3000
