--- a/framework/logging/requirements.txt
+++ b/framework/logging/requirements.txt
@@ -1,3 +1,3 @@
--e git+git@github.com:simplexsigil/cfTrainingSampler.git@f9c203b70d766958bcaee33446d3d98120fc2340#egg=cfwrapper&subdirectory=framework/cfwrapper
+-e ../cfwrapper
 pyzmq==17.0.0
 zmq==0.0.0
