--- a/framework/logging_api_sample/requirements.txt
+++ b/framework/logging_api_sample/requirements.txt
@@ -1,5 +1,4 @@
--e git+git@github.com:simplexsigil/cfTrainingSampler.git@3f7df90c27f7941a15256e3083068d0bed1dc2f7#egg=cfwrapper&subdirectory=framework/cfwrapper
+-e ../cfwrapper
 logging-api==0.0.1
-logging-interface==0.0.1
 pyzmq==17.0.0
 zmq==0.0.0
